--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Quotify"
+        android:theme="@style/Theme.Quotify.XML"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".QuotifyMainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Quotify">
+            android:theme="@style/Theme.Quotify.XML">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
